Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52530

[Android 6.0] Bluetooth module doesn't add all needed permissions to AndroidManifest.xml

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.6.0
    • None
    • Android 6.0 and higher

    Description

      Beginning with Android 6.0, using Bluetooth requires permission ACCESS_FINE_LOCATION or ACCESS_COARSE_LOCATION to be set, see e.g. http://stackoverflow.com/questions/33052811 .

      When using the module bluetooth in qt, this needed permission is not set automatically. For example, the btscanner example doesn't find Bluetooth classic devices in Android 6.0, while in works fine with Android 5.0. Manually adding one of the above mentioned permissions solves this problem for Android 6.0, but I think this should work out of the box.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ablasche Alex Blasche
              kmichel K. Michel
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes