Fix typo in Android permission name

Task-number: QTBUG-52530
Change-Id: I6ae41b3f8998ffc18d8b8205c6bbe788e8c4898b
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@theqtcompany.com>